--- a/weapp/apps/customerized_apps/shvote/templates/webapp/m_shvote.html
+++ b/weapp/apps/customerized_apps/shvote/templates/webapp/m_shvote.html
@@ -196,21 +196,21 @@
 		outline: none;
 	}
 	.wui-detail-dialog{
-		width:80%;
-		height:90%;
+		width:92%;
+		height:92%;
 		display:none;
-		z-index:99999999;
+		z-index:99999;
 		margin:0 auto;
 		background-color:#f0f0f0;
 		border-radius: 4px;
-		position: absolute;
-		top: 5%;
-		left: 10%;
+		position: fixed;
+		top: 4%;
+		left: 4%;
 		overflow-x: hidden;
    		overflow-y: auto;
 	}
 	.wui-detail-top{
-		margin: 5% 0 3% 0;
+		margin: 3% 0 3% 0;
 		padding: 5% 0 1% 6%;
 		background-color: #FFF;
 	}
@@ -269,12 +269,14 @@
 	}
 	.wui-detail-close{
 		background-image:url('/static_v2/img/shvote_close.png');
-		width:67px;
-		height:67px;
-		z-index:999999999;
-		position:absolute;
-		top: 3%;
-		right: 6%;
+		background-repeat: no-repeat;
+	    background-size: cover;
+		width: 46px;
+		height: 46px;
+		z-index: 100000;
+		position: fixed;
+		top: 2%;
+		right: 2%;
 		display: none;
 	}
 	p.wui-noborder{
@@ -292,36 +294,42 @@
         font-size: 0.9rem;	
     }	
 	.wui-share-mask{
-		z-index: 9999999999 !important;
+		z-index: 100001 !important;
 		display: none;
 	}
 	.wui-share-mask .wui-share-arrow{
-		width: 33%;
-		position: absolute;
-		top: 0;
-	    right: 4%;
+		background-image: url('/static_v2/img/shvote_arrow.png');
+		background-repeat: no-repeat;
+	    background-size: cover;
+        width: 33%;
+   		height: 29%;
+   		margin: 0 0 0 60%;
 	}
 	.wui-share-mask .wui-share-invite{
 		color: #FFF;
 		font-family: SimHei;
 	    font-size: 1.5rem;
-	    position: absolute;
-	    top: 33%;
-        left: 17%;
+        width: 100%;
+	    display: inline-block;
+	    text-align: center;
+	    margin-top: 6%;
 	}
 	.wui-share-mask .wui-share-close{
-		width: 10%;
-	    position: absolute;
-	    top: 60%;
-        left: 45%;
+		background-image: url('/static_v2/img/shvote_share_close.png');
+		background-repeat: no-repeat;
+	    background-size: cover;
+	    width: 57px;
+	    height: 57px;
+        margin: 32% auto 0 auto;
 	}
 	.wui-share-mask .wui-share-known{
 		color: #FFF;
 		font-family: SimHei;
 	    font-size: 1.5rem;
-	    position: absolute;
-	    top: 68%;
-        left: 42%;
+        width: 100%;
+	    display: inline-block;
+	    text-align: center;
+	    margin-top: 5%;
 	}
 	@media only screen and (max-width: 320px){
 		.wui-vote-btn{
@@ -331,6 +339,9 @@
 	    	height: 36px;
 	    }*/
 	}
+	.wui-apps-alert{
+        z-index: 100001;
+    }
 </style>
 {% endblock %}
 
@@ -413,7 +424,7 @@
 				<span class="wui-detail-user-name"></span>
 			</div>
 			<div class="wui-detail-btn">
-				<button>投票</button>
+				<button class="wa-ivote">投票</button>
 				<button class="wa-detail-share">拉票</button>
 			</div>
 			<div class="wui-detail-middle">
@@ -425,9 +436,9 @@
 	</div>
 </div>
 <div class="wui-share-mask">
-	<img class="wui-share-arrow" src="/static_v2/img/shvote_arrow.png">
+	<div class="wui-share-arrow"></div>
 	<span class="wui-share-invite">邀请你的小伙伴,帮你投票</span>
-	<img class="wui-share-close wa-share-close" src="/static_v2/img/shvote_share_close.png">
+	<div class="wui-share-close wa-share-close"></div>
 	<span class="wui-share-known">知道了</span>
 </div>
 {% endblock %}
@@ -486,7 +497,7 @@
 
         //参与投票
         var voteLock = false;
-        $('.wa-rank-list').on('click','.wa-ivote', function(){
+        $('body').on('click','.wa-ivote', function(){
         	var left_chance = parseInt($('.wa-left-chance').html());
         	if( !left_chance > 0) {
         		wuiAlert('每天每组只可投票一次');
@@ -653,11 +664,13 @@
 			}
 		}
 		mask('show');
+		$('body').css('overflow','hidden');
 		$('#userDetailDialog').show();
 		$('.wa-detail-close').show();
 	});
 	$('body').delegate('.wa-detail-close', 'click', function(event) {
 		mask('hide');
+		$('body').css('overflow','auto');
 		$('#userDetailDialog').hide();
 		$('.wa-detail-close').hide();
 	});
