赚积分交互

--- a/weapp/mall/templates/mall/editor/edit_expired_time.html
+++ b/weapp/mall/templates/mall/editor/edit_expired_time.html
@@ -20,50 +20,65 @@
 					<input type="text" class="form-control fl xa-expiredTime" style="width:85px;" id="order_expired_day" name="order_expired_day" placeholder="" value="{% if mall_config %}{{ mall_config.order_expired_day }}{% endif %}" data-validate="norequire,,require-positive-int" maxlength="100"/>
 				<span class="fl">小时内未付款，自动取消该订单</span><span class="fl ml10 xui-color-mark">注：空为不设置</span>
 				<div style="clear: both;"></div>
-				<div class="errorHint" style="margin-top: 10px;margin-left: 90px;"></div>
+				<div class="errorHint" style="margin-left: 108px;"></div>
 			</div>
-			<div>
-				<p>2.&nbsp;&nbsp;<input type="checkbox" class="xa-switchShare" style="" name="isShowPage">订单提交成功后提示分享赚积分：<span class="c9">（注：开启前请确认首页-积分规则已正确设置）</span></p>
-				<!-- <div class="xa-setShareSection xui-setShareSection">
-					<div class="xui-panel">
-						<div class="xui-i-title"><label class="mr10">上传弹层背景图片</label><span class="c6 f12">格式：建议jpg,png 尺寸：500*680 不超过1M</span></div>
-						<section class="xui-i-content">
-							<input data-field="image" name="image" type="hidden" value="" data-validate="require-notempty::请添加一张图片" data-force-validate="true">
-							<div class="xui-imgDisplayBtn xa-dialogTrigger" data-target-dialog="W.dialog.termite.SelectImagesDialog" data-dialog-parameter="{&quot;multiSelection&quot;: false}" data-target-name="image" style="background: url(/static_v2/img/editor/addProduct.png) no-repeat;width: 50px!important;height:50px!important;"></div>
-						</li>
-						</section>
-					</div>
-				</div> -->
-				<div class="xa-setShareSection xui-setShareSection">
+			<div class="mt15">
+				<p>2.&nbsp;&nbsp;<label for="" class="vm mr5 mb0"><input type="checkbox" class="xa-switchShare" style="" name="isShowPage" {% if share_page_condig.is_share_page %}checked{% endif %}></label>订单提交成功后提示分享赚积分：<span class="c9">（注：开启前请确认首页-积分规则已正确设置）</span></p>
+				<div class="xa-setShareSection xui-setShareSection xa-validateController" style="display:none">
 					<table>
 						<tr>
 							<td>上传弹层背景图片：</td>
 							<td>
-								<input data-field="image" name="backgroundImage" type="hidden" value="" data-validate="require-notempty::请添加一张图片" data-force-validate="true" class="xa-share-vali">
-								<div class="xui-imageSection"><div class="xui-imgDisplayBtn xa-dialogTrigger"></div></div>
+								<input data-field="image" name="backgroundImage" type="hidden" value="{{share_page_config.background_image}}" data-validate="require-notempty" class="xa-forceVali">
+								<div class="xui-imageSection">
+								{% if share_page_config.background_image %}
+									<div class="xa-dialogTrigger xui-dialogSelectedBtn">重新上传</div>
+									<div class="xa-imgContainer">
+										<img src="{{share_page_config.background_image}}">
+									</div>
+								{% else %}
+									<div class="xui-imgDisplayBtn xa-dialogTrigger"></div>
+									<div class="xa-imgContainer"></div>
+								{% endif %}
+								</div>
 								<span class="c9 ml10">格式：建议jpg/png  尺寸：500*680  不超过1M</span>
+								<div class="errorHint" data-error-hint="请添加一张图片"></div>
 							</td>
 						</tr>
 						<tr>
 							<td>选择要分享的图文：<br/><span class="c9">（仅显示正文内容）</span></td>
 							<td>
+								<input type="hidden" name="materialId" class="xa-forceVali"  data-validate="require-notempty">
 								<div class="xa-wxMessageSection">
 									<a href="javascript:void(0);" class="xa-wxMessage xui-inlineblock mb15">添加</a>
 								</div>
+								<div class="errorHint" data-error-hint="请添加图文"></div>
 							</td>
 						</tr>
 						<tr>
 							<td>分享图片：</td>
 							<td>
-								<input data-field="image" name="shareImage" type="hidden" value="" data-validate="require-notempty::请添加一张图片" data-force-validate="true" class="xa-share-vali">
-								<div class="xui-imageSection"><div class="xui-imgDisplayBtn xa-dialogTrigger"></div></div>
+								<input data-field="image" name="shareImage" type="hidden" value="{{share_page_config.share_image}}" data-validate="require-notempty" class="xa-forceVali">
+								<div class="xui-imageSection">
+								{% if share_page_config.share_image %}
+									<div class="xa-dialogTrigger xui-dialogSelectedBtn">重新上传</div>
+									<div class="xa-imgContainer">
+										<img src="{{share_page_config.share_image}}">
+									</div>
+								{% else %}
+									<div class="xui-imgDisplayBtn xa-dialogTrigger"></div>
+									<div class="xa-imgContainer"></div>
+								{% endif %}
+								</div>
 								<span class="c9 ml10">建议尺寸90*90，仅支持jpg/png</span>
+								<div class="errorHint" data-error-hint="请添加一张图片"></div>
 							</td>
 						</tr>
 						<tr>
 							<td>分享描述：</td>
 							<td>
-								<textarea class="xa-share-vali xui-shareInfo" data-validate="require-notempty::不能为空" data-force-validate="true" name="shareInfo" value="">{{ share_page_config.share_describe }}</textarea>
+								<textarea class="xui-shareInfo" data-validate="require-notempty::不能为空" name="shareInfo" value="">{{ share_page_config.share_describe }}</textarea>
+								<div class="errorHint"></div>
 							</td>
 						</tr>
 					</table>
@@ -80,6 +95,18 @@
 {% block js %}
 <script type="text/javascript">
 	$(document).ready(function() {
+		$('.xa-switchShare').change(function(event) {
+			if($(event.target).is(':checked')){
+				$('.xa-setShareSection').show();
+				$('.xa-forceVali').attr({
+					'data-validate': 'require-notempty',
+					'data-force-validate': 'true'
+				});
+			}else{
+				$('.xa-forceVali').removeAttr('data-validate');
+				$('.xa-setShareSection').hide();
+			}
+		});
 		//提交
 		$('#editForm').submit(function() {
 			if (!W.validate()) {
@@ -105,16 +132,15 @@
 					var images = data.images;
 					var $imgContainer = $(event.target);
 					var src;
-					console.log(data)
 					_.each(images, function(image) {
 						src = image.url;
 					});
-					$(event.target).removeClass('xui-imgDisplayBtn').addClass('xui-dialogSelectedBtn').html('重新上传').parent().append("<img src="+ src +">");
-					$(event.target).parents('td').find('.xa-share-vali').val(src);
+					$(event.target).removeClass('xui-imgDisplayBtn').addClass('xui-dialogSelectedBtn').html('重新上传').parent().find('.xa-imgContainer').html("<img src="+ src +">");
+					$(event.target).parents('td').find('.xa-forceVali').val(src);
 				}
 			});
 		})
-		var showDialog = function(){
+		$('body').delegate('.xa-wxMessage,.xa-changeNews','click',function(){
 			W.dialog.showDialog('W.dialog.weixin.SelectSingleMaterialDialog',{
 				handleHideBtn:true,
 				success:function(material){
@@ -123,12 +149,9 @@
 						material: material
 					});
 					var $el = newsView.render();
-					$('.xa-wxMessageSection').html($el).append('<a href="javascript:void(0);" class="xa-changeNews mt10 ml10 xui-inlineblock">更换</a>');
+					$('.xa-wxMessageSection').html($el).append('<a href="javascript:void(0);" class="xa-changeNews mt10 ml10 xui-inlineblock">更换</a>').parent().find('.xa-forceVali').val(material.id);
 				}
 			});
-		}
-		$('body').delegate('.xa-wxMessage,.xa-changeNews','click',function(){
-			showDialog();
 		});
 	});
 </script>
