--- a/weapp/mall/templates/mall/editor/edit_expired_time.html
+++ b/weapp/mall/templates/mall/editor/edit_expired_time.html
@@ -48,7 +48,7 @@
 						<tr>
 							<td>选择要分享的图文：<br/><span class="c9">（仅显示正文内容）</span></td>
 							<td>
-								<input type="hidden" name="materialId" class="xa-forceVali"  data-validate="require-notempty">
+								<input type="hidden" name="newsId" class="xa-forceVali"  data-validate="require-notempty">
 								<div class="xa-wxMessageSection">
 									<a href="javascript:void(0);" class="xa-wxMessage xui-inlineblock mb15">添加</a>
 								</div>
