部分页面‘单品券’改为‘多商品劵’，‘全店通用劵’改为‘通用劵’

--- a/weapp/mall/templates/mall/editor/promotion/coupon_rules.html
+++ b/weapp/mall/templates/mall/editor/promotion/coupon_rules.html
@@ -70,9 +70,9 @@
 			<td>${ promotion.detail.name }</td>
 			<td>
 				{{if promotion.detail.limit_product}}
-				单品券
+				多商品券
 				{{else}}
-				全店通用券
+				通用券
 				{{/if}}
 			</td>
 			<td>${ promotion.detail.money }</td>
