--- a/weapp/mall/templates/mall/editor/promotion/issuing_coupons_record.html
+++ b/weapp/mall/templates/mall/editor/promotion/issuing_coupons_record.html
@@ -72,9 +72,9 @@
             <td>${ record.coupon_name }</td>
             <td>
                 {{if record.limit_product}}
-                单品券
+                多商品券
                 {{else}}
-                全店通用券
+                通用券
                 {{/if}}
             </td>
             <td>${ record.money }</td>
