--- a/weapp/weixin2/templates/weixin/advance_manage/edit_qrcode.html
+++ b/weapp/weixin2/templates/weixin/advance_manage/edit_qrcode.html
@@ -384,9 +384,9 @@
             success: function(data) {
                 var couponType = '';
                 if(data[0].limit_product) {
-                    couponType = "(单品券)";
+                    couponType = "(多商品券)";
                 }else{
-                    couponType = "(全店通用券)";
+                    couponType = "(通用券)";
                 }
                 selectCouponMoney = data[0].money;
                 couponRuleId = data[0].id;
