--- a/weapp/mall/templates/mall/editor/promotion/create_issuing_coupons_record.html
+++ b/weapp/mall/templates/mall/editor/promotion/create_issuing_coupons_record.html
@@ -119,9 +119,9 @@ $(document).ready(function() {
                     limit += '张';
                 }
                 if(data[0].limit_product) {
-                    couponType = "(单品券)";
+                    couponType = "(多商品券)";
                 }else{
-                    couponType = "(全店通用券)";
+                    couponType = "(通用券)";
                 }
                 selectCouponMoney = data[0].money;
                 couponRuleId = data[0].id;
