--- a/weapp/static_v2/js/view/mall_promotion_filter_view/template.html
+++ b/weapp/static_v2/js/view/mall_promotion_filter_view/template.html
@@ -91,8 +91,8 @@
 			<label>优惠券类型：</label>
 			<select class="" id="coupon_promotion_type" name="promotion_type">
 				<option value="-1">全部</option>
-				<option value="1">全店通用券</option>
-				<option value="2">单品券</option>
+				<option value="1">通用券</option>
+				<option value="2">多商品券</option>
 			</select>
 		</div>
 	</div>
