--- a/weapp/apps/customerized_apps/shvote/templates/webapp/m_shvote_participance.html
+++ b/weapp/apps/customerized_apps/shvote/templates/webapp/m_shvote_participance.html
@@ -20,13 +20,17 @@
         text-align: center;
         width: 100%;
     }
-    .wui-i-uploadimg .xui-imgList li {
+    .wui-i-uploadimg.xui-uploadHeadImg .xui-imgList li {
+        width: 90px;
+        height: 90px;
         position: absolute;
         float: none;
         margin-left: 38%;
         box-shadow: none;
     }
     .wui-i-uploadimg.xui-uploadHeadImg .xui-imgList li img {
+        width: 90px;
+        height: 90px;
         border-radius: 45px;
     }
     .wui-i-shvoteParticipance-content{
@@ -64,16 +68,9 @@
         background: url("/termite_static/img/component/group/defalut_icon.jpg");
         background-size: 100%;
     }
-    .wui-i-uploadimg.xui-uploadHeadImg .xui-imgList li {
-        width: 90px;
-        height: 90px;
-    }
-    .wui-i-uploadimg.xui-uploadHeadImg .xui-imgList li img {
-        width: 90px;
-        height: 90px;
-    }
     .wa-details{
         background: #f0f0f0;
+        border: none;
     }
     .xui-btn-danger.xa-submitShvote {
         background: #ff4200;
@@ -118,7 +115,7 @@
             </div>
             <div style="padding: 10px 0 10px 10px;width: 95%;margin-left: 2%;">
                 <div class="wui-i-shvoteParticipance-content-lable">内容简介</div>
-                <input style="height: 150px;width: 90%;" class="wui-i-input wa-details" data-validate="require-notempty::请输入详情" placeholder="输入简介"/>
+                <textarea style="height: 150px;width: 90%;" class="wui-i-input wa-details" data-validate="require-notempty::请输入内容简介" placeholder="输入简介"></textarea>
             </div>
             <div class="wui-UploadImg" style="">
                 <div class="xui-productReviewCreatePage wui-i-uploadimg xa-inputControl" data-input-type="imgarea" data-input-name="detail-pic" data-control-type="appkit.uploadimg">
@@ -141,10 +138,25 @@
 {% block js %}
 <script type="text/javascript">
 $(document).ready(function() {
+    var $submitButtonContainer = $('.xa-submitButtonContainer');
+    if ($submitButtonContainer.length > 0) {
+        var $button = $submitButtonContainer.find('.xa-submitShvote');
+        if (W.activityStatus === '已结束') {
+            $button.text('活动已结束');
+            $button.removeClass('xa-submitTermite').removeClass('xui-btn-danger').addClass('xui-btn-disable');
+        } else if (W.isAlreadyParticipanted) {
+            $button.text('您已参加过该活动');
+            $button.removeClass('xa-submitTermite').removeClass('xui-btn-danger').addClass('xui-btn-disable');
+        } else if (W.activityStatus === '未开始') {
+            $button.text('请等待活动开始...');
+            $button.removeClass('xa-submitTermite').removeClass('xui-btn-danger').addClass('xui-btn-disable');
+        }
+        $submitButtonContainer.show();
+    }
     //绑定提交按钮
     $('.xa-submitShvote').click(function() {
         if (!W.is_pic_up){
-            wuiAlert('图片还未上传成功，请稍等！');
+            wuiAlert('头像还未上传！');
             return;
         }
         if (!W.validate()) {
@@ -157,7 +169,6 @@ $(document).ready(function() {
         $('.wa-pics').siblings("ul").find('img').each(function(){
             pics.push($(this).attr('data-src'));
         });
-        var $submitButtonContainer = $('.xa-submitButtonContainer');
         W.getApi().call({
             app: 'm/apps/shvote',
             resource: 'shvote_participance',
@@ -172,12 +183,9 @@ $(document).ready(function() {
                 details: $('.wa-details').val(),
                 pics: JSON.stringify(pics)
             },
-            success: function(data) {
-                if(data.code == 200){
-                    wuiAlert("报名成功", 5000);
-                }
+            success: function() {
+                wuiAlert("报名成功", 5000);
                 loadingStatus();
-                $submitButtonContainer.hide();
             },
             error: function(data) {
                 loadingStatus();
