赚积分后台

--- a/weapp/mall/templates/mall/editor/edit_expired_time.html
+++ b/weapp/mall/templates/mall/editor/edit_expired_time.html
@@ -60,6 +60,7 @@
 									</li>
 									</a>
 								</ul>
+								<a href="javascript:void(0);" class="xa-changeNews mt10 ml10 xui-inlineblock">更换</a>
 								{% else %}
 									<a href="javascript:void(0);" class="xa-wxMessage xui-inlineblock mb15">添加</a>
 								{% endif %}
