新增投票配置

--- a/weapp/apps/customerized_apps/shvote/templates/editor/shvotes.html
+++ b/weapp/apps/customerized_apps/shvote/templates/editor/shvotes.html
@@ -126,10 +126,10 @@
 					</a>
 				</td>
 				<td>
-					${item.vote_count}
+					${item.total_voted_count}
 				</td>
 				<td>
-					${item.participant_count}
+					${item.total_participanted_count}
 				</td>
 				<td>
 					${item.start_time}
