--- a/weapp/mall/templates/mall/editor/edit_expired_time.html
+++ b/weapp/mall/templates/mall/editor/edit_expired_time.html
@@ -17,7 +17,7 @@
 		<section>
 			<div class="clearfix mt30 xui-timeSection">
 				<span class="fl" for="order_expired_day">1.&nbsp;&nbsp;未付款订单：</span>
-					<input type="text" class="form-control fl xa-expiredTime" style="width:85px;" id="order_expired_day" name="order_expired_day" placeholder="" value="{% if mall_config %}{{ mall_config.order_expired_day }}{% endif %}" data-validate="norequire,,require-positive-int" maxlength="100"/>
+					<input type="text" class="form-control fl xa-expiredTime" style="width:85px;" id="order_expired_day" name="order_expired_day" placeholder="" value="{% if mall_config %}{{ mall_config.order_expired_day }}{% endif %}" data-validate="norequire,,require-nonnegative" maxlength="100"/>
 				<span class="fl">小时内未付款，自动取消该订单</span><span class="fl ml10 xui-color-mark">注：空为不设置</span>
 				<div style="clear: both;"></div>
 				<div class="errorHint" style="margin-left: 108px;"></div>
