--- a/weapp/apps/customerized_apps/shvote/templates/webapp/m_shvote_participance.html
+++ b/weapp/apps/customerized_apps/shvote/templates/webapp/m_shvote_participance.html
@@ -57,9 +57,10 @@
         color: #333333;
     }
     .wui-group {
-        width: 156px;
+        width: 75%;
         height: 40px;
         margin-bottom: 5px;
+        border: none;
     }
     .xui-i-uploadHeadImg{
         background: #fff;
