--- a/weapp/apps/customerized_apps/shvote/templates/webapp/m_shvote_rank.html
+++ b/weapp/apps/customerized_apps/shvote/templates/webapp/m_shvote_rank.html
@@ -172,6 +172,7 @@ $(function(){
 
 	$('.wa-rank-groups').scroll(function(){
 		$('.wa-rank-groups div').eq(3).removeClass('grad');
+	  	console.log($('.wa-rank-groups div').eq(0).offset().left);		
 	})	
 });
 
