--- a/weapp/termite/static/termite_js/app/component/appkit/shvotedescription/shvotedescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/shvotedescription/shvotedescription.html
@@ -27,7 +27,7 @@
             {{component.model.description|safe}}
         </div>
         <div class="wui-i-btn">
-            <button class="wa-getback wui-i-getback">返回投票&gt;&gt;</button>
+            <button class="wa-getback wui-i-getback">返回投票&nbsp>></button>
             <button class="wa-imark wui-i-imark">我要报名</button>
         </div>
     </div>
