--- a/weapp/apps/customerized_apps/shvote/templates/webapp/m_shvote.html
+++ b/weapp/apps/customerized_apps/shvote/templates/webapp/m_shvote.html
@@ -79,8 +79,7 @@
 		display: inline-block;
 		font-size: 16px;
 		text-align: center;
-		line-height: 40px;
-
+		line-height: 43px;
 	}
 	.wui-group > div.active{
 		color: #ff4200;
@@ -126,8 +125,8 @@
 		border: 1px solid #ff4200;
 		border-radius: 2px;
 		outline: none;
-		padding-left: 26px;
-		background: url(/static_v2/img/search.png) no-repeat 1% 50%;
+		padding-left: 29px;
+		background: url(/static_v2/img/search.png) no-repeat 2% 50%;
 		background-size: 20px;
 	}
 	.wui-searchBtn{
@@ -334,9 +333,9 @@
 	    text-align: center;
 	    margin-top: 5%;
 	}
-	::-webkit-scrollbar{
+/*	::-webkit-scrollbar{
 		width:0;
-	}
+	}*/
 	@media only screen and (max-width: 320px){
 		.wui-vote-btn{
 			width: 3.8rem;
@@ -460,10 +459,7 @@
         if(W.isPC){
             return false;
         }
-   		var isMember = {% if isMember %}true{% else %}false{% endif %};
-	   		if(!isMember){
-	        showQrcode(W.qrcodeUrl);
-	   		}
+
         $('.wa-shvote-desc').hide();
 		// 我要报名
 		$('.wa-imark').click(function(){
@@ -504,15 +500,18 @@
 			$('.wa-mobile').hide();
 		});
 
-		$('.wa-groups').scroll(function(){
-			$('.wa-groups div').eq(3).removeClass('grad');
-		})
+
         //展示参与统计
 //        getDynamicData();
 
         //参与投票
         var voteLock = false;
         $('body').on('click','.wa-ivote', function(){
+           	var isMember = {% if isMember %}true{% else %}false{% endif %};
+		   		if(!isMember){
+		        showQrcode(W.qrcodeUrl);
+		        return;
+	   		}
         	var left_chance = parseInt($('.wa-left-chance').html());
         	if(left_chance <= 0) {
         		wuiAlert('今天该分组的投票次数已用完');
