--- a/weapp/termite/static/v4/css/app_widget.css
+++ b/weapp/termite/static/v4/css/app_widget.css
@@ -2201,7 +2201,7 @@ li.wui-selectBox-display-table {
 	background: -webkit-radial-gradient(#ffc5b1,#fff);
 }
 .wui-shvoteDescription .wui-i-description{
-	padding: 10px 5px;
+	padding: 10px 0;
 }
 .wui-shvoteDescription .wui-i-rule p,.wui-shvoteDescription .wui-i-description p{
 	text-indent: 20px;
@@ -2211,7 +2211,7 @@ li.wui-selectBox-display-table {
 .wui-shvoteDescription .wui-i-getback{
 	display: block;
 	float: right;
-	margin-bottom: 10px;
+	margin-bottom: 12px;
 	background: #adadad;
 	color: #fff;
 	border: none;
@@ -2229,7 +2229,7 @@ li.wui-selectBox-display-table {
 	background: #ff4200;
 	color: #fff;
 	border: none;
-	height: 40px;
+	height: 43px;
 	font-size: 1rem;
 	font-family: '黑体';
 }
