通用券的编辑页面样式问题

--- a/weapp/mall/templates/mall/editor/promotion/create_coupon_rule.html
+++ b/weapp/mall/templates/mall/editor/promotion/create_coupon_rule.html
@@ -189,7 +189,7 @@
 margin-top: -29px;"></div>
     </div>
     <div class="panel-body mb0 xui-promotion-createFlashSalePage xa-product">
-      {% if coupon_rule %}
+      {% if coupon_rule and promotion.products %}
       <table id="productListTable" style="background:#fff;" class="table table-bordered table-condensed mb0  xb-noTdBorder xui-productList">
         <thead class="xui-theadHeight">
           <tr>
