--- a/weapp/apps/customerized_apps/shvote/templates/webapp/m_shvote.html
+++ b/weapp/apps/customerized_apps/shvote/templates/webapp/m_shvote.html
@@ -55,8 +55,8 @@
 	.wui-dynamic-bottom p{
 		text-align: center;
 		font-size: 14px;
-		border-bottom: 5px solid #f0f0f0;	
-		padding-bottom: 5px;	
+		border-bottom: 5px solid #f0f0f0;
+		padding-bottom: 5px;
 	}
 	.wui-rank-link{
 		border-bottom: 1px solid #e1e1e1;
@@ -73,6 +73,8 @@
 		position: relative;
 		overflow-x: auto;
 		overflow-y: hidden;
+		/*overflow-y:scroll;*/
+		-webkit-overflow-scrolling: touch;
 		height: 43px;
 		line-height: 43px;
 		font-size: 0;
@@ -126,7 +128,7 @@
 		padding-bottom: 7px;
 	}
 	.wui-search-input{
-		padding: 1px;		
+		padding: 1px;
 		height: 30px;
 		width: 80%;
 		border: 1px solid #ff4200;
@@ -146,7 +148,7 @@
 		right: 0;
 		top: 0;
 		padding: 0 15px;
-		outline: none;	
+		outline: none;
 	}
 	.wui-rank-item{
 		width: 48%;
@@ -300,8 +302,8 @@
         border-radius: 4px;
         box-shadow: 0 3px 0px #b62f00;
         font-family: SimHei;
-        font-size: 0.9rem;	
-    }	
+        font-size: 0.9rem;
+    }
 	.wui-share-mask{
 		z-index: 100001 !important;
 		display: none;
@@ -346,7 +348,7 @@
 	@media only screen and (max-width: 320px){
 		.wui-vote-btn{
 			width: 3.8rem;
-	    }	
+	    }
 /*	    .wui-searchBtn{
 	    	height: 36px;
 	    }*/
@@ -393,13 +395,13 @@
 				<div class="wui-searchBox">
 					<input type="text" class="wui-search-input wa-search-text" placeholder="请输入关键字" maxlength="20">
 					<button type="button" class="wui-searchBtn wa-search">搜索</button>
-					<p>选手列表是根据选手票数由多到少排列，显示前100名。如果需要查找100名以外的选手请在搜索栏输入选手编号或选手名称即可。</p>							
-				</div>												
+					<p>选手列表是根据选手票数由多到少排列，显示前100名。如果需要查找100名以外的选手请在搜索栏输入选手编号或选手名称即可。</p>
+				</div>
 			</div>
 
 			<div class="wui-group wa-groups">
 			</div>
-			<div class="wui-rank-list wa-rank-list">		
+			<div class="wui-rank-list wa-rank-list">
 			</div>
 		</div>
 	</div>
@@ -412,10 +414,10 @@
 				<div class="wui-img-mask"></div>
 				<img src={ result_list_icon }>
 				<div class="wui-rank-name">
-					<span class="wui-rank-serial-number">{ result_list_serial_number }</span> 
+					<span class="wui-rank-serial-number">{ result_list_serial_number }</span>
 					<span>{ result_list_name }</span>
-				</div> 			
-			</div> 
+				</div>
+			</div>
 			<div class="wui-rank-vote">
 				<div class="wui-rank-voteLef wa-vote-left">
 					<span>{ result_list_count }</span>票
@@ -423,12 +425,12 @@
 				<div class="wui-rank-voteRig wa-ivote" data-id={ id }>
 					<button type="button" class="wui-vote-btn">投票</button>
 				</div>
-			</div> 
+			</div>
 		</div>
 	</div>
 </script>
 <div>
-	<div class="wui-detail-close wa-detail-close"></div>	
+	<div class="wui-detail-close wa-detail-close"></div>
 	<div id="userDetailDialog" class="wui-detail-dialog">
 		<div class="wui-detail-top">
 			<div class="wui-detail-user wa-detail-user">
@@ -523,7 +525,7 @@
         	var $this = $(this);
             if(voteLock) return false;
             voteLock = true;
-            var vote_to = $(this).attr('data-id'); 
+            var vote_to = $(this).attr('data-id');
             W.getApi().call({
                 app: 'm/apps/shvote',
                 resource: 'shvote_participance',
@@ -554,10 +556,10 @@
                 }
             });
         });
-		
+
     });
 
-    $(function(){	
+    $(function(){
         if(W.isPC){
             showDesc();
             return false;
@@ -586,7 +588,7 @@
                 current_group = $('.active').html();
                 can_play_info = member_info.can_play_info;
                 update_member_info(member_info,current_group);
-                //更新排名信息				
+                //更新排名信息
                 getRankInfo(current_group,'');
             },
             error: function(data){
@@ -615,9 +617,9 @@
 	    	$('.wa-groups').append(group);
 	    }
 	    $('.wa-groups div').eq(0).addClass('active');
-	    if(record_info.groups.length < 4){ 
+	    if(record_info.groups.length < 4){
 	   		var wid = 100/record_info.groups.length;
-	   		$('.wa-groups div').css("width",wid+'%');   
+	   		$('.wa-groups div').css("width",wid+'%');
 	    }else{
 	    	var w_wid = $(window).width();
 	    	var d_wid = $(window).width()/4;
@@ -642,7 +644,7 @@
 				search_name: search_name
             },
             success: function(data) {
-           		$('.wa-rank-list').html('');  	
+           		$('.wa-rank-list').html('');
                 var result = data.result_list;
                 user_detail = result;
                 var tpl = new Template($('#tpl').html());
@@ -653,7 +655,7 @@
 		                result_list_count : result[i].count,
 		                result_list_icon : result[i].icon,
 		                id : result[i].id
-		            });   
+		            });
 		        $('.wa-rank-list').append(s);
 	        	}
             },
